// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`externals transforms correctly using "externals-0" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: /react/
}
"
`;

exports[`externals transforms correctly using "externals-1" data 1`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: {
        jquery: 'jQuery',
        react: 'react'
    }
}
"
`;

exports[`externals transforms correctly using "externals-1" data 2`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: myObj
}
"
`;

exports[`externals transforms correctly using "externals-1" data 3`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: {
        jquery: 'jQuery',
        react: reactObj
    }
}
"
`;

exports[`externals transforms correctly using "externals-1" data 4`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: {
        jquery: 'jQuery',
        react: [reactObj, path.join(__dirname, 'app'), 'jquery']
    }
}
"
`;

exports[`externals transforms correctly using "externals-1" data 5`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: {
        lodash: {
            commonjs: 'lodash',
            amd: 'lodash',
            root: '_'
        }
    }
}
"
`;

exports[`externals transforms correctly using "externals-1" data 6`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: {
        lodash: {
            commonjs: lodash,
            amd: hidash,
            root: _
        }
    }
}
"
`;

exports[`externals transforms correctly using "externals-1" data 7`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: [{
        a: false,
        b: true,
        './ext': ./hey
    }, function(context, request, callback) {if (/^yourregex$/.test(request)){return callback(null, 'commonjs ' + request);}callback();}]
}
"
`;

exports[`externals transforms correctly using "externals-1" data 8`] = `
"module.exports = {
    entry: 'index.js',

    output: {
		filename: 'bundle.js'
	},

    externals: [
        myObj,
        function(context, request, callback) {if (/^yourregex$/.test(request)){return callback(null, 'commonjs ' + request);}callback();}
    ]
}
"
`;
